--- a/tasks/operations.yml
+++ b/tasks/operations.yml
@@ -122,7 +122,13 @@
 
 - name: Substrate Ops | Purge all
   block:
-    - name: Substrate Ops | Remove bin/data dir
+    - name: Substrate Purge All | Substrate Stop
+      ansible.builtin.systemd:
+        state: stopped
+        enabled: false
+        name: "{{ substrate_node_bin_name }}"
+
+    - name: Substrate Purge All | Remove bin/data dir
       ansible.builtin.file:
         path: "{{ item }}"
         state: absent
@@ -132,13 +138,13 @@
         - "/etc/logrotate.d/{{ substrate_node_bin_name }}"
         - "/var/log/{{ substrate_node_bin_name }}"
 
-    - name: Substrate Ops | Remove user
+    - name: Substrate Purge All | Remove user
       ansible.builtin.user:
         name: "{{ substrate_node_user }}"
         state: absent
         remove: true
 
-    - name: Substrate Ops | Remove group
+    - name: Substrate Purge All | Remove group
       ansible.builtin.group:
         name: "{{ substrate_node_group }}"
         state: absent
