--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -20,7 +20,7 @@
 - name: Substrate Configure | Rotate logs before
   command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
   when:
-    - (_node_startup.changed or _binary_updated is defined)
+    - (_node_startup.changed or _binary_updated == true)
     - (substrate_node_logrotate_conf_enable | bool and substrate_node_logging | lower == "file")
 
 - name: Substrate Configure | Service start
@@ -37,7 +37,7 @@
     daemon_reload: true
     state: restarted
     enabled: true
-  when: _node_startup.changed or _binary_updated is defined
+  when: _node_startup.changed or _binary_updated == true
   register: _node_restart
 
 - name: Substrate Configure | Wait for service start/restart
