--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -20,6 +20,7 @@
     - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
+        # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
         dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
