--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,6 +10,7 @@ substrate_node_operations: true
 # example: substrate_node_version: '0.3.0'
 substrate_node_version: "latest"
 substrate_node_repository: "digitalnativeinc/standard-substrate"
+substrate_node_bin_name: "opportunity-standalone"
 substrate_node_source:
   "https://github.com/{{ substrate_node_repository }}/releases/download/\
   {{ substrate_node_latest_version | default(substrate_node_version) }}/\
@@ -18,7 +19,6 @@ substrate_node_releases: "https://api.github.com/repos/{{ substrate_node_reposit
 # substrate_node_get_url_headers: null
 substrate_node_selinux_enabled: false
 substrate_node_bin_dir: "/usr/local/bin/"
-substrate_node_bin_name: "opportunity-standalone"
 substrate_node_user: "standard"
 substrate_node_group: "{{ substrate_node_user }}"
 # example: substrate_node_restart: "always" | "on-failure"
@@ -51,7 +51,12 @@ substrate_node_data_dir: "/data"
 # levels: "error, warn, info, debug, trace"
 # example: substrate_node_log_level: "warn, txpool=debug, peerset=trace"
 substrate_node_log_level: ""
-substrate_node_identity_options: ["alice", "bob", "charlie", "dave", "eve", "ferdie", "one", "two", "dev"]
+substrate_node_force_runtime_options: ["kusama", "rococo", "westend"]
+# example: substrate_node_force_runtime_options: "rococo"
+substrate_node_force_runtime: ""
+substrate_node_identity_options:
+  ["alice", "bob", "charlie", "dave", "eve", "ferdie", "one", "two", "dev"]
+# example: substrate_node_identity: "alice"
 substrate_node_identity: ""
 substrate_node_key: ""
 # example: substrate_node_pruning: "archive" | "constrained"
@@ -78,9 +83,11 @@ substrate_node_prometheus_external: false
 substrate_node_collator_chain: ""
 substrate_node_collator_parachain_id: ""
 substrate_node_collator_bootnodes: ""
-substrate_node_collator_p2p_port: ""
-substrate_node_collator_ws_port: ""
-substrate_node_collator_flag: false
+substrate_node_collator_p2p_port: "30334"
+substrate_node_collator_ws_port: "9945"
+substrate_node_collator_rpc_port: "9934"
+substrate_node_collator_prometheus_port: "9616"
+substrate_node_collator_flag: true
 
 # INTERNAL VARIABLES
 _substrate_node_bin_path: "{{ substrate_node_bin_dir }}{{ substrate_node_bin_name }}"
