--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -20,6 +20,7 @@
     - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
+        # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
         dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
@@ -31,8 +32,7 @@
       until: _download_output is succeeded
       retries: 5
       delay: 2
-  when:
-    - '"://" in substrate_node_source'
+  when: '"://" in substrate_node_source'
 
 - name: Substrate Install | Push
   block:
@@ -47,8 +47,7 @@
         backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
         force: true
       register: _push_output
-  when:
-    - '"://" not in substrate_node_source'
+  when: '"://" not in substrate_node_source'
 
 - name: Substrate Install | Unarchive
   block:
@@ -84,8 +83,8 @@
     force: true
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
-    mode: 0644
-  # no_log: true
+    mode: 0744
+  no_log: true
   when: substrate_node_key | length
 
 - name: Substrate Install | Ensure node key is removed if not specified
@@ -93,8 +92,40 @@
     state: absent
     dest: "{{ _substrate_node_key_path }}"
     force: true
-  # no_log: true
+  no_log: true
   when: substrate_node_key == ""
+
+- name: Substrate Install | Download chain spec if defined as URL
+  block:
+    - name: Substrate Install | Download chain spec
+      get_url:
+        url: "{{ substrate_node_chain }}"
+        dest: "{{ substrate_node_data_dir }}/{{ substrate_node_chain | basename }}"
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        mode: 0744
+        force: true
+      register: download_spec
+
+    - set_fact:
+        substrate_node_chain: "{{ download_spec.dest }}"
+  when: '"://" in substrate_node_chain'
+
+- name: Substrate Install | Download collator chain spec if defined as URL
+  block:
+    - name: Substrate Install | Download collator chain spec
+      get_url:
+        url: "{{ substrate_node_collator_chain }}"
+        dest: "{{ substrate_node_data_dir }}/{{ substrate_node_collator_chain | basename }}"
+        owner: "{{ substrate_node_user }}"
+        group: "{{ substrate_node_group }}"
+        mode: 0744
+        force: true
+      register: download_collator_spec
+
+    - set_fact:
+        substrate_node_collator_chain: "{{ download_collator_spec.dest }}"
+  when: '"://" in substrate_node_collator_chain'
 
 - name: Substrate Install | Set fact
   set_fact:
