--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -68,9 +68,16 @@
     success_msg: Identity option set correctly
   when: substrate_node_identity != ""
 
+- name: Substrate Prelim | Check force runtime is properly defined
+  assert:
+    that: substrate_node_force_runtime | lower in substrate_node_force_runtime_options
+    fail_msg: Runtime must be set to one of the pre-defined values
+    success_msg: Force runtime option set correctly
+  when: substrate_node_force_runtime != ""
+
 - name: Substrate Prelim | Check RPC methods option is properly defined
   assert:
-    that: substrate_node_rpc_methods | lower in ["auto", "safe", unsafe]
+    that: substrate_node_rpc_methods | lower in ["auto", "safe", "unsafe"]
     fail_msg: RPC methods must be set to Auto, Safe or Unsafe
     success_msg: RPC methods option set correctly
   when: substrate_node_rpc_methods != ""
