--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -15,12 +15,12 @@
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: "0644"
-  register: _node_startup
+  register: _node_template
 
 - name: Substrate Configure | Rotate logs before
   command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
   when:
-    - (_node_startup.changed or _binary_updated == true)
+    - (_node_template.changed or _binary_updated == true)
     - (substrate_node_logrotate_conf_enable | bool and substrate_node_logging | lower == "file")
 
 - name: Substrate Configure | Service start
@@ -37,7 +37,9 @@
     daemon_reload: true
     state: restarted
     enabled: true
-  when: _node_startup.changed or _binary_updated == true
+  when:
+    - _node_template.changed
+    - _node_start.changed == false
   register: _node_restart
 
 - name: Substrate Configure | Wait for service start/restart
