Remove no_log option - helps with debugging.

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -84,7 +84,7 @@
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: 0744
-  no_log: true
+  # no_log: true
   when: substrate_node_key | length
 
 - name: Substrate Install | Ensure node key is removed if not specified
@@ -92,7 +92,7 @@
     state: absent
     dest: "{{ _substrate_node_key_path }}"
     force: true
-  no_log: true
+  # no_log: true
   when: substrate_node_key == ""
 
 - name: Substrate Install | Download chain spec if defined as URL
