--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -9,16 +9,17 @@
   when: substrate_node_logging | lower == 'file'
 
 - name: Substrate Configure | Systemd Template file
-  template:
+  ansible.builtin.template:
     src: ./templates/substrate-node.service.j2
     dest: "/etc/systemd/system/{{ substrate_node_bin_name }}.service"
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: "0644"
+    trim_blocks: false
   register: _node_template
 
 - name: Substrate Configure | Rotate logs before
-  command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
+  ansible.builtin.command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
   when:
     - (_node_template.changed or _binary_updated == true)
     - (substrate_node_logrotate_conf_enable | bool and substrate_node_logging | lower == "file")
@@ -43,7 +44,7 @@
   register: _node_restart
 
 - name: Substrate Configure | Wait for service start/restart
-  pause:
+  ansible.builtin.pause:
     seconds: 10
   when: _node_start.changed or _node_restart.changed
 
