--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -15,8 +15,8 @@
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: "0644"
-    trim_blocks: true
-    lstrip_blocks: true
+    # trim_blocks: false
+    # lstrip_blocks: true
   register: _node_template
 
 - name: Substrate Configure | Rotate logs before
