--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -15,7 +15,7 @@
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: "0644"
-    trim_blocks: true
+    trim_blocks: false
     # lstrip_blocks: true
   register: _node_template
 
