--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -20,7 +20,7 @@
 - name: Substrate Configure | Rotate logs before
   ansible.builtin.command: "logrotate -f /etc/logrotate.d/{{ substrate_node_bin_name }}"
   when:
-    - (_node_template.changed or _binary_updated == true)
+    - (_node_template.changed or _binary_updated | bool)
     - (substrate_node_logrotate_conf_enable | bool and substrate_node_logging | lower == "file")
 
 - name: Substrate Configure | Service start
@@ -37,9 +37,7 @@
     daemon_reload: true
     state: restarted
     enabled: true
-  when:
-    - _node_template.changed
-    - _node_start.changed == false
+  when: _node_template.changed or (_node_start.changed == false) or (_binary_updated | bool)
   register: _node_restart
 
 - name: Substrate Configure | Wait for service start/restart
