--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,5 +1,10 @@
 ---
-- name: Substrate Install | Pull Latest tag
+- name: Substrate Install | Set fact
+  set_fact:
+    _archive_source: true
+  when: ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source)
+
+- name: Substrate Install | Pull latest tag
   block:
     - name: Substrate Install | Get repository latest release version
       uri:
@@ -21,13 +26,13 @@
       get_url:
         url: "{{ substrate_node_source }}"
         # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
-        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ (_archive_source != true) | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
         mode: a+x
-        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+        backup: "{{ (_archive_source != true) | ternary(true, false) }}"
       register: _download_output
       until: _download_output is succeeded
       retries: 5
@@ -39,12 +44,12 @@
     - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
-        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ (_archive_source != true) | ternary(_substrate_node_bin_path, '/tmp') }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
-        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+        backup: "{{ (_archive_source != true) | ternary(true, false) }}"
         force: true
       register: _push_output
   when: '"://" not in substrate_node_source'
@@ -74,7 +79,7 @@
         backup: true
         force: true
       register: _unarchive_push
-  when: '".tar.gz" in substrate_node_source'
+  when: (_archive_source == true)
 
 - name: Substrate Install | Create node key file
   copy:
@@ -130,4 +135,4 @@
 - name: Substrate Install | Set fact
   set_fact:
     _binary_updated: true
-  when: (_release_push.changed is defined) or (_unarchive_push.changed is defined) or (_download_output.changed is defined)
+  when: _release_push.changed or _unarchive_push.changed or _download_output.changed
