--- a/tasks/postflight.yml
+++ b/tasks/postflight.yml
@@ -1,6 +1,7 @@
 ---
 - name: Substrate Postflight | Get node details
   uri:
+    # url: "http://{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}:{{ substrate_node_rpc_port }}"
     url: "http://localhost:{{ substrate_node_rpc_port }}"
     method: POST
     body: >
