--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,8 +1,7 @@
 ---
 - name: Substrate Install | Set fact
   set_fact:
-    _archive_source: true
-  when: ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source)
+    _archive_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | ternary(true, false) }}"
 
 - name: Substrate Install | Pull latest tag
   block:
