--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,5 +1,5 @@
 ---
-- name: Substrate Install | Set fact
+- name: Substrate Install | Set pre-install facts
   set_fact:
     _archive_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | ternary(true, false) }}"
 
@@ -25,13 +25,13 @@
       get_url:
         url: "{{ substrate_node_source }}"
         # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
-        dest: "{{ (_archive_source | bool == True) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _archive_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
         mode: a+x
-        backup: "{{ (_archive_source | bool == True) | ternary(true, false) }}"
+        backup: "{{ _archive_source | ternary(true, false) }}"
       register: _download_output
       until: _download_output is succeeded
       retries: 5
@@ -43,12 +43,12 @@
     - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
-        dest: "{{ (_archive_source | bool == True) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _archive_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
-        backup: "{{ (_archive_source | bool == True) | ternary(true, false) }}"
+        backup: "{{ _archive_source | ternary(true, false) }}"
         force: true
       register: _push_output
   when: '"://" not in substrate_node_source'
@@ -79,8 +79,8 @@
         force: true
       register: _unarchive_push
   when:
-    - _archive_source | bool == True
-    - _archive_source | bool == True
+    - _archive_source
+    - _archive_source
 
 - name: Substrate Install | Create node key file
   copy:
@@ -136,7 +136,6 @@
         substrate_node_collator_chain: "{{ download_collator_spec.dest }}"
   when: '"://" in substrate_node_collator_chain'
 
-- name: Substrate Install | Set fact
+- name: Substrate Install | Set post-install facts
   set_fact:
-    _binary_updated: true
-  when: _unarchive_push.changed or _download_output.changed
+    _binary_updated: true "{{ (_unarchive_push.changed) or (_download_output.changed) | ternary(true, false) }}"
