--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,8 @@
 ---
 - name: Substrate Install | Set pre-install facts
   set_fact:
-    _archive_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | ternary(true, false) }}"
+    _binary_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | ternary(true, false) }}"
+    _remote_source: "{{ '"://" in substrate_node_source' | ternary(true, false) }}"
 
 - name: Substrate Install | Pull latest tag
   block:
@@ -25,33 +26,33 @@
       get_url:
         url: "{{ substrate_node_source }}"
         # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
-        dest: "{{ _archive_source | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _binary_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
         mode: a+x
-        backup: "{{ _archive_source | ternary(true, false) }}"
+        backup: "{{ _binary_source | ternary(true, false) }}"
       register: _download_output
       until: _download_output is succeeded
       retries: 5
       delay: 2
-  when: '"://" in substrate_node_source'
+  when: _remote_source
 
 - name: Substrate Install | Push
   block:
     - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
-        dest: "{{ _archive_source | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _binary_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
-        backup: "{{ _archive_source | ternary(true, false) }}"
+        backup: "{{ _binary_source | ternary(true, false) }}"
         force: true
       register: _push_output
-  when: '"://" not in substrate_node_source'
+  when: not _remote_source
 
 - name: Substrate Install | Unarchive
   block:
@@ -78,9 +79,7 @@
         backup: true
         force: true
       register: _unarchive_push
-  when:
-    - _archive_source
-    - _archive_source
+  when: not _binary_source
 
 - name: Substrate Install | Create node key file
   copy:
