--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -86,6 +86,7 @@ substrate_node_prometheus_external: false
 substrate_node_collator_chain: ""
 substrate_node_collator_parachain_id: ""
 substrate_node_collator_bootnodes: ""
+substrate_node_collator_pruning: ""
 substrate_node_collator_force_runtime: ""
 substrate_node_collator_p2p_port: "30334"
 substrate_node_collator_ws_port: "9945"
