--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,7 @@
 ---
 - name: Substrate Install | Set pre-install facts
   set_fact:
-    _binary_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | ternary(false, true) }}"
+    _binary_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | ternary(true, false) }}"
     _remote_source: "{{ ('://' in substrate_node_source) | ternary(true, false) }}"
     _remote_chainspec: "{{ ('://' in substrate_node_chain) | ternary(true, false) }}"
     _remote_collator_chainspec: "{{ ('://' in substrate_node_collator_chain) | ternary(true, false) }}"
@@ -27,7 +27,6 @@
     - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
-        # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
         dest: "{{ _binary_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
