--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,10 +1,10 @@
 ---
 - name: Substrate Install | Set pre-install facts
   set_fact:
-    _binary_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) | bool }}"
-    _remote_source: "{{ ('://' in substrate_node_source) | ternary(true, false) }}"
-    _remote_chainspec: "{{ ('://' in substrate_node_chain) | ternary(true, false) }}"
-    _remote_collator_chainspec: "{{ ('://' in substrate_node_collator_chain) | ternary(true, false) }}"
+    _archive_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) }}"
+    _remote_source: "{{ '://' in substrate_node_source }}"
+    _remote_chainspec: "{{ '://' in substrate_node_chain }}"
+    _remote_collator_chainspec: "{{ '://' in substrate_node_collator_chain }}"
 
 - name: Substrate Install | Pull latest tag
   block:
@@ -27,13 +27,13 @@
     - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
-        dest: "{{ _binary_source | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _archive_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
         mode: a+x
-        backup: "{{ _binary_source | ternary(true, false) }}"
+        backup: "{{ _archive_source }}"
       register: _download_output
       until: _download_output is succeeded
       retries: 5
@@ -45,12 +45,12 @@
     - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
-        dest: "{{ _binary_source | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _archive_source | ternary(_substrate_node_bin_path, '/tmp') }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
-        backup: "{{ _binary_source | ternary(true, false) }}"
+        backup: "{{ _archive_source }}"
         force: true
       register: _push_output
   when: not _remote_source
@@ -80,7 +80,7 @@
         backup: true
         force: true
       register: _unarchive_push
-  when: not _binary_source
+  when: not _archive_source
 
 - name: Substrate Install | Create node key file
   copy:
@@ -138,4 +138,4 @@
 
 - name: Substrate Install | Set post-install facts
   set_fact:
-    _binary_updated: true "{{ (_unarchive_push.changed) or (_download_output.changed) | ternary(true, false) }}"
+    _binary_updated: "{{ (_unarchive_push.changed) or (_download_output.changed) }}"
