--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -94,6 +94,7 @@ substrate_node_collator_ws_port: "9945"
 substrate_node_collator_rpc_port: "9934"
 substrate_node_collator_prometheus_port: "9616"
 substrate_node_collator_flag: true
+substrate_node_collator_force_authoring: true
 
 # INTERNAL VARIABLES
 _substrate_node_bin_path: "{{ substrate_node_bin_dir }}{{ substrate_node_bin_name }}"
