Add state cache size option.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -79,6 +79,7 @@ substrate_node_rpc_cors: ""
 substrate_node_prometheus_port: 9615
 substrate_node_prometheus_disable: false
 substrate_node_prometheus_external: false
+substrate_node_state_cache_size: null
 
 #
 # Collator Variables
@@ -89,10 +90,10 @@ substrate_node_collator_parachain_id: ""
 substrate_node_collator_bootnodes: ""
 substrate_node_collator_pruning: ""
 substrate_node_collator_force_runtime: ""
-substrate_node_collator_p2p_port: "30334"
-substrate_node_collator_ws_port: "9945"
-substrate_node_collator_rpc_port: "9934"
-substrate_node_collator_prometheus_port: "9616"
+substrate_node_collator_p2p_port: 30334
+substrate_node_collator_ws_port: 9945
+substrate_node_collator_rpc_port: 9934
+substrate_node_collator_prometheus_port: 9616
 substrate_node_collator_flag: true
 substrate_node_collator_force_authoring: true
 
