Add telemetry url option.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -53,6 +53,7 @@ substrate_node_data_dir: "/data"
 # levels: "error, warn, info, debug, trace"
 # example: substrate_node_log_level: "warn, txpool=debug, peerset=trace"
 substrate_node_log_level: ""
+substrate_node_telemetry_url: ""
 substrate_node_force_runtime_options: ["kusama", "rococo", "westend"]
 # example: substrate_node_force_runtime_options: "rococo"
 substrate_node_force_runtime: ""
